chore: Assign /frontend/ ownership to Vivek

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,5 +4,5 @@
 # Directories
 /backend/ @SakshiPandey97
 /frontend/ @Vishal-Prakash-1
-/backend/ @Dhruv-mak
-/frontend/ @Dhruv-mak
+/frontend/ @vivek4879
+* @Dhruv-mak
