--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.1
 click==8.1.7
 cryptography==41.0.5
 Flask==3.0.0
+Flask-Cors==4.0.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.1
 idna==3.4
