--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,11 +12,20 @@ idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+numpy==1.26.2
 oracledb==1.4.2
+packaging==23.2
+pandas==2.1.3
+plotly==5.18.0
 pycparser==2.21
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3.post1
 requests==2.31.0
+six==1.16.0
 SQLAlchemy==2.0.22
+tenacity==8.2.3
 typing_extensions==4.8.0
+tzdata==2023.3
 urllib3==2.0.7
 Werkzeug==3.0.1
