--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,11 +13,11 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 numpy==1.26.2
-oracledb==1.4.2
 packaging==23.2
 pandas==2.1.3
 plotly==5.18.0
 pycparser==2.21
+PyMySQL==1.1.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
