--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.4.1",
     "http-proxy-middleware": "^2.0.6",
     "plotly.js": "^2.27.1",
     "react": "^18.2.0",
